# haskell-gtd-nl

./: .gitignore  .gitmodules  CHANGELOG.md  LICENSE  README.md  bench.sh  cabal.project  cabal.project.local  doc.md  haskell-gtd.cabal
app/: Main.ghc-lib-parser.v2.hs  Main.hs  old.code-.hs  sample.imports.hs  sample2.hs
app/debug/: Main.ghc-lib-parser.hs  Main.haskell-src-exts.hs  Main.hs  sample.hs  sample2.hs  sample3.hs  tmp.hs
app/package/: Main.hs
app/server/: Main.hs
cpphs-1.20.9.1/: cpphs.hs
cpphs-1.20.9.1/Language/Preprocessor/Cpphs/: CppIfdef.hs  MacroPass.hs
cpphs-1.20.9.1/new/: TimeCompat.hs
cpphs-1.20.9.1/old/: TimeCompat.hs
extension/: package.json  webpack.config.js
extension/src/: extension.ts
extension/src/test/suite/: extension.test.ts
src/: Paths_haskell_gtd.hs
src/GTD/: Cabal.hs  Configuration.hs  Haskell.hs  ParserExe.hs  Resolution.hs  Server.hs  State.hs  Utils.hs
src/GTD/Cabal/: Cache.hs  Dependencies.hs  FindAt.hs  Full.hs  Get.hs  Package.hs  Parse.hs  Types.hs
src/GTD/Haskell/: AST.hs  Cpphs.hs  Declaration.hs  Enrich.hs  Lines.hs  Module.hs  Package.hs  Resolution.hs  Utils.hs  Walk.hs
src/GTD/Haskell/Parser/: GhcLibParser.hs  HaskellSrcExts.hs
src/GTD/Haskell/Parser/GhcLibParser/: Extension.hs
src/GTD/Resolution/: Cache.hs  Definition.hs  Module.hs  Package.hs  State.hs  Types.hs  Utils.hs
src/GTD/Resolution/Cache/: Package.hs  Resolution.hs  Usages.hs  Utils.hs
src/GTD/Resolution/Caching/: Utils.hs
src/GTD/Resolution/Module/: Multi.hs  Single.hs  Types.hs  Utils.hs
src/GTD/Resolution/State/Caching/: Cabal.hs  Package.hs  Utils.hs
src/GTD/Server/: Cpphs.hs  Definition.hs  DropPackageCache.hs  Usages.hs  Utils.hs
src/GTD/Server/CodeLens/: LocalUsages.hs
src/GTD/Utils/OS/: Memory.hs
test/: Bench.hs  Cache.hs  Definitions.hs  Haskell.hs  Spec.hs  Usages.hs  definitions.repl.hs
test/GTD/: HaskellTest.hs
test/integrationTestRepo/fake/: cabal.project  definitions.txt
test/integrationTestRepo/fake/executables/: CHANGELOG.md  executables.cabal
test/integrationTestRepo/fake/executables/app/exe1/: Main.hs
test/integrationTestRepo/fake/executables/app/exe2/: Main.hs
test/integrationTestRepo/fake/executables/app/exe3/: Main.hs
test/integrationTestRepo/fake/lib1/: CHANGELOG.md  lib1.cabal
test/integrationTestRepo/fake/lib1/src/: Lib1.hs
test/integrationTestRepo/fake/lib2/: CHANGELOG.md  lib2.cabal
test/integrationTestRepo/fake/lib2/src/: Lib2.hs
test/samples/cabalFull/: exp.locals.0.json  exp.resolved.0.json  exp.unresolved.0.json  out.locals.0.json  out.resolved.0.json  out.unresolved.0.json
test/samples/figureOutExports/1/: debug.out.json  import.1.hs.out.json  import.2.hs  import.2.hs.out.json  import.3.hs  import.3.hs.out.json  import.4.hs  import.4.hs.out.json  main.hs  module.out.json  result.exp.json  result.out.json  state0.out.json
test/samples/figureOutExports/2/: debug.out.json  main.hs  module.out.json  result.exp.json  result.out.json  state0.out.json
test/samples/figureOutExports/3/: debug.out.json  import.1.hs  import.1.hs.out.json  import.2.hs.out.json  main.hs  module.out.json  result.exp.json  result.out.json  state0.out.json
test/samples/haskellApplyCppHs/: exp.0.hs  exp.1.hs  in.0.hs
test/samples/haskellGetExportedIdentifiers/: exp.0.json  in.0.hs  out.0.json  out.ghc-lib-parser.0.json
test/samples/haskellGetIdentifierUsages/: exp.0.json  exp.1.json  in.0.hs  out.ghc-lib-parser.0.json  out.ghc-lib-parser.1.json
test/samples/haskellGetIdentifiers/: exp.0.json  exp.1.json  exp.2.json  exp.3.json  exp.4.json  in.0.hs  in.0.hs.desc  in.1.hs  in.2.hs  in.3.hs  in.4.hs  out.0.json  out.1.json  out.2.json  out.ghc-lib-parser.0.json  out.ghc-lib-parser.1.json  out.ghc-lib-parser.2.json  out.ghc-lib-parser.3.json  out.haskell-src-exts.2.json
test/samples/haskellGetImportedIdentifiers/: exp.0.json  in.0.hs  in.1.hs  out.0.json  out.ghc-lib-parser.0.json
test/samples/lines/: cases.0.json  exp.0.json  in.0.header.hs  in.0.hs  out.0.json  out.c1.0.hs
test/samples/magic/: cases.0.json  exp.0.json  in.0.hs  out.0.json  out.c1.0.hs
test/samples/parsePackage/: exp.0.json  out.0.json
test/samples/updateExports/: out.0.json
test/src/: Cabal.hs  Cache.hs  Definitions.hs  Haskell.hs  LocalUsages.hs  Resolution.hs  Usages.hs
