cabal-version:      2.4
name:               haskell-gtd
version:            0.0.2.5
author:             kr3v
extra-source-files: CHANGELOG.md

-- add the following line to `ghc-options` to enable profiling
-- -fprof-auto -rtsopts "-with-rtsopts=-N -A16M -p -s -h -l -i0.1"

common common-deps
    default-language: Haskell2010
    build-depends:
        base ^>= 4.16.4.0

        , Cabal ^>= 3.10.1.0
        , cpphs ^>= 1.20.9.1
        , ghc-lib-parser ^>= 9.6.2.20230523
        , haskell-src-exts ^>= 1.23.1

        , lens ^>= 5.2.2
        , lrucache ^>= 1.2.0.1
        , monad-logger ^>= 0.3.40
        , optparse-applicative ^>= 0.18.1.0

        , directory ^>= 1.3.8.1
        , filepath ^>= 1.4.100.3
        , process ^>= 1.6.17.0
        , unix ^>= 2.8.1.1

        , async ^>= 2.2.4
        , containers ^>= 0.6.7
        , either ^>= 5.0.2
        , lifted-async ^>= 0.10.2.4
        , monad-control ^>= 1.0.3.1
        , mtl ^>= 2.2.2
        , random ^>= 1.2.1.1
        , safe-exceptions ^>= 0.1.7.3
        , time ^>= 1.12.2
        , transformers ^>= 0.5.6.2
        , unliftio ^>= 0.2.24.0

        , aeson ^>= 2.1.2.1
        , binary ^>= 0.8.9.1

        , bytestring ^>= 0.11.4.0
        , regex ^>= 1.1.0.2
        , regex-posix ^>= 0.96.0.1
        , text ^>= 2.0.2
        , utf8-string ^>= 1.0.2

        , network ^>= 3.1.4.0
        , servant ^>= 0.19.1
        , servant-server ^>= 0.19.2
        , warp ^>= 3.3.27

        , graphviz ^>= 2999.20.1.0

executable haskell-gtd-debug
    import:           common-deps
    main-is:          Main.hs
    build-depends:
        haskell-gtd

    hs-source-dirs:   app/debug

    ghc-options: -O2 -g1 -threaded -Wall -rtsopts "-with-rtsopts=-N -A128M -T"

executable haskell-gtd-server
    import:           common-deps
    main-is:          Main.hs
    build-depends:
        haskell-gtd

    hs-source-dirs:   app/server

    ghc-options: -O2 -g1 -threaded -Wall -rtsopts "-with-rtsopts=-N -A128M -T"

executable haskell-gtd-package
    import:           common-deps
    main-is:          Main.hs
    build-depends:
        haskell-gtd

    hs-source-dirs:   app/package

    ghc-options: -O2 -g1 -threaded -Wall -rtsopts "-with-rtsopts=-N -A128M -T"

library
    import:           common-deps
    hs-source-dirs:   src

    exposed-modules:
        GTD.Cabal
        GTD.Configuration
        GTD.Haskell.Cpphs
        GTD.Haskell.Declaration
        GTD.Haskell.Module
        GTD.Haskell.Parser.GhcLibParser
        GTD.Resolution.Module
        GTD.Resolution.State
        GTD.Resolution.State.Caching.Cabal
        GTD.Resolution.State.Caching.Package
        GTD.Resolution.State.Caching.Utils
        GTD.Resolution.Utils
        GTD.Server
        GTD.Utils

    ghc-options: -O2 -g1 -Wall

test-suite haskell-gtd-lib-test
    import: common-deps

    type: exitcode-stdio-1.0
    hs-source-dirs: test
    main-is: Spec.hs
    build-depends:
        haskell-gtd
        , QuickCheck ^>= 2.14.3
        , hspec ^>= 2.11.1
    build-tool-depends: hspec-discover:hspec-discover
    ghc-options: -O2 -g1 -Wall
