cabal-version:      2.4
name:               haskell-gtd
version:            0.0.3.3
author:             dbaynak
extra-source-files: CHANGELOG.md
tested-with:        GHC == 9.2.7

-- add the following line to `ghc-options` to enable profiling
-- -fprof-auto -rtsopts "-with-rtsopts=-N -A16M -p -s -h -l -i0.1"

common common-deps
    default-language: Haskell2010
    build-depends:
        base >= 4.16 && < 5

        , Cabal ^>= 3.10.1.0
        , cabal-install ^>= 3.10.1.0
        , cpphs ^>= 1.20.9.1
        , ghc-lib-parser ^>= 9.6.2.20230523
        , syb

        , lens
        , lrucache
        , monad-logger
        , optparse-applicative

        , directory
        , filepath
        , process
        , unix

        , async
        , deepseq
        , either
        , lifted-async
        , lifted-base
        , monad-control
        , mtl
        , random
        , safe-exceptions
        , split
        , time
        , transformers
        , unliftio

        , containers
        , unordered-containers
        , hashable

        , aeson
        , aeson-pretty
        , binary

        , bytestring
        , regex
        , regex-posix
        , text
        , utf8-string

executable haskell-gtd-nl-debug
    import:           common-deps
    main-is:          Main.hs
    build-depends:
        haskell-gtd

        , graphviz

    hs-source-dirs:   app/debug

    ghc-options: -O2 -g1 -threaded -Wall -rtsopts "-with-rtsopts=-N -A128M -T"

executable haskell-gtd-nl-server
    import:           common-deps
    main-is:          Main.hs
    build-depends:
        haskell-gtd

        , network
        , servant
        , servant-server
        , warp

    hs-source-dirs:   app/server

    ghc-options: -O2 -g1 -threaded -Wall -rtsopts "-with-rtsopts=-N -A1M -T"

executable haskell-gtd-nl-parser
    import:           common-deps
    main-is:          Main.hs
    build-depends:
        haskell-gtd

    hs-source-dirs:   app/package

    ghc-options: -O2 -g1 -threaded -Wall -rtsopts "-with-rtsopts=-N -A128M -T"

library
    import:           common-deps
    hs-source-dirs:   src

    exposed-modules:
        GTD.Cabal
        GTD.Cabal.Cache
        GTD.Cabal.Dependencies
        GTD.Cabal.FindAt
        GTD.Cabal.Get
        GTD.Cabal.Parse
        GTD.Cabal.Types
        GTD.Configuration
        GTD.Haskell.Cpphs
        GTD.Haskell.Declaration
        GTD.Haskell.Lines
        GTD.Haskell.Module
        GTD.Haskell.Parser.GhcLibParser
        GTD.ParserExe
        GTD.Resolution.Cache.Package
        GTD.Resolution.Cache.Resolution
        GTD.Resolution.Cache.Usages
        GTD.Resolution.Cache.Utils
        GTD.Resolution.Module
        GTD.Resolution.Module.Multi
        GTD.Resolution.Module.Single
        GTD.Resolution.Module.Types
        GTD.Resolution.Module.Utils
        GTD.Resolution.Package
        GTD.Resolution.Types
        GTD.Resolution.Utils
        GTD.Server.CodeLens.LocalUsages
        GTD.Server.Cpphs
        GTD.Server.Definition
        GTD.Server.DropPackageCache
        GTD.Server.Usages
        GTD.Server.Utils
        GTD.State
        GTD.Utils
        GTD.Utils.OS.Memory
        GTD.Utils.Orphans
        Paths_haskell_gtd

    ghc-options: -fprof-auto -O2 -g1 -Wall

test-suite haskell-gtd-nl-tests
    import: common-deps

    type: exitcode-stdio-1.0
    hs-source-dirs: test/src
    main-is: Spec.hs
    other-modules:
        Cabal
        Cache
        Definitions
        Haskell
        Resolution
        Usages
    build-depends:
        haskell-gtd
        , QuickCheck
        , hspec
    build-tool-depends: hspec-discover:hspec-discover
    ghc-options: -O2 -g1 -Wall

benchmark haskell-gtd-nl-bench
    import: common-deps

    type:             exitcode-stdio-1.0
    hs-source-dirs:   bench
    main-is:          Bench.hs
    build-depends:
        haskell-gtd
        , criterion
        , statistics
        , vector
    default-language: Haskell2010
    ghc-options: -O2 -g1 -threaded -Wall -rtsopts "-with-rtsopts=-N -A128M -T"
    -- ghc-options: -fprof-auto -O2 -g1 -threaded -Wall -rtsopts "-with-rtsopts=-N -A128M -pj -T"
    -- ghc-options: -fprof-auto -O2 -g1 -threaded -Wall -rtsopts "-with-rtsopts=-N -A128M -pj -hc -l -L4096 -T"
