cabal-version:      2.4
name:               executables
version:            0.1.0.0

author:             kr3v
maintainer:         d.baynak@protonmail.com

executable exe1
    main-is:          exe1/Main.hs

    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   app
    default-language: Haskell2010

executable exe2
    main-is:          exe2/Main.hs

    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   app
    default-language: Haskell2010

executable exe3
    main-is:          Main.hs

    build-depends:
        base ^>=4.16.4.0
        , lib1

        , lens ^>= 5.2.2
        , random ^>= 1.2.1.1
        , containers ^>= 0.6.7
        , mtl ^>= 2.2.2
        , transformers ^>= 0.5.6.2
        , time ^>= 1.12.2

    hs-source-dirs:   app/exe3
    default-language: Haskell2010
